add support for unique identity
