# src/CSharp/EasyMicroservices.AuthenticationsMicroservice.Domain/Contracts/Common/UserSummaryContract.cs
@@ -1,4 +1,5 @@
-﻿using System;
+﻿using EasyMicroservices.Cores.Interfaces;
+using System;
 using System.Collections.Generic;
 using System.Linq;
 using System.Text;
@@ -6,9 +7,10 @@ using System.Threading.Tasks;
 
 namespace EasyMicroservices.AuthenticationsMicroservice.Contracts.Common
 {
-    public class UserSummaryContract
+    public class UserSummaryContract : IUniqueIdentitySchema
     {
         public string UserName { get; set; }
         public string Password { get; set; }
+        public string UniqueIdentity { get; set; }
     }
 }
