# src/CSharp/EasyMicroservices.AuthenticationsMicroservice.Domain/Contracts/Requests/ServicePermissionRequestContract.cs
@@ -1,11 +1,14 @@
-﻿namespace EasyMicroservices.AuthenticationsMicroservice.Contracts.Requests
+﻿using EasyMicroservices.Cores.Interfaces;
+
+namespace EasyMicroservices.AuthenticationsMicroservice.Contracts.Requests
 {
     /// <summary>
     /// 
     /// </summary>
-    public class ServicePermissionRequestContract
+    public class ServicePermissionRequestContract : IUniqueIdentitySchema
     {
         public string RoleName { get; set; }
         public string MicroserviceName { get; set; }
+        public string UniqueIdentity { get; set; }
     }
 }
